update path image slider

--- a/index.html
+++ b/index.html
@@ -239,16 +239,16 @@
         <div class="slider-container">
           <div class="slider-list">
             <div class="slider-item">
-              <img src="/images/banner-1.webp" alt="slider">
+              <img src="./images/banner-1.webp" alt="slider">
             </div>
             <div class="slider-item">
-              <img src="/images/banner-2.webp" alt="slider">
+              <img src="./images/banner-2.webp" alt="slider">
             </div>
             <div class="slider-item">
-              <img src="/images/banner-3.webp" alt="slider">
+              <img src="./images/banner-3.webp" alt="slider">
             </div>
             <div class="slider-item">
-              <img src="/images/banner-4.webp" alt="slider">
+              <img src="./images/banner-4.webp" alt="slider">
             </div>
           </div>
         </div>
